--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
+fastapi~=0.116.1
 uvicorn
-sqlalchemy
+sqlalchemy~=2.0.41
 asyncpg
 greenlet
-python-dotenv
+python-dotenv~=1.1.1
 starlette~=0.47.2
 pydantic~=2.11.7
 fastapi>=0.104.0,<1.0.0
@@ -11,3 +11,5 @@ uvicorn[standard]>=0.24.0,<1.0.0
 ruff
 twilio
 python-dotenv
+
+langgraph~=0.6.1
