--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ uvicorn[standard]>=0.24.0,<1.0.0
 ruff
 twilio
 python-dotenv
+
+# IA Agents Dependencies
+langchain>=0.1.0
+langgraph>=0.0.40
+openai>=1.0.0
+pgvector>=0.2.0
+numpy>=1.24.0
+sentence-transformers>=2.2.0
+tiktoken>=0.5.0
