feat: Integrate FAQ agent and supervisor from feature/faq-agent branch
- Add FAQ agent with intelligent search and flexible responses
- Add supervisor agent with session-aware routing
- Add embedding service for vector search
- Add graph workflow and state management
- Add standalone FAQ population script
- Update requirements.txt with new dependencies
- Update chat service to support temporary conversations
- Update database models for FAQ embeddings

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi~=0.116.1
+fastapi
 uvicorn
-sqlalchemy~=2.0.41
+sqlalchemy
 asyncpg
 greenlet
-python-dotenv~=1.1.1
+python-dotenv
 starlette~=0.47.2
 pydantic~=2.11.7
 fastapi>=0.104.0,<1.0.0
@@ -12,4 +12,11 @@ ruff
 twilio
 python-dotenv
 
-langgraph~=0.6.1
+# IA Agents Dependencies
+langchain>=0.1.0
+langgraph>=0.0.40
+openai>=1.0.0
+pgvector>=0.2.0
+numpy>=1.24.0
+sentence-transformers>=2.2.0
+tiktoken>=0.5.0
