--- a/config/env.example
+++ b/config/env.example
@@ -22,7 +22,7 @@ OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 # CONFIGURACIÓN DE AGENTES IA
 # =============================================================================
 
-# Dimensión de embeddings (no cambiar)
+# Dimensión de embeddings (requerido para compatibilidad con OpenAI text-embedding-3-small)
 EMBEDDING_DIMENSION=1536
 
 # Máximo número de resultados FAQ
@@ -38,7 +38,7 @@ WIZARD_SESSION_TIMEOUT=3600
 # Configuración SMTP para Gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=ithakapostula@gmail.com
+EMAIL_USER=your-email@example.com
 EMAIL_PASS=your-app-password-here
 
 # =============================================================================
