--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-fastapi
-uvicorn
-sqlalchemy
-asyncpg
-greenlet
-python-dotenv
-starlette~=0.47.2
-pydantic~=2.11.7
 fastapi>=0.104.0,<1.0.0
 uvicorn[standard]>=0.24.0,<1.0.0
-ruff
-twilio
-python-dotenv
+sqlalchemy>=2.0.0,<3.0.0
+asyncpg>=0.29.0,<1.0.0
+greenlet>=3.0.0,<4.0.0
+python-dotenv>=1.0.0,<2.0.0
+starlette~=0.47.2
+pydantic~=2.11.7
+ruff>=0.1.0,<1.0.0
+twilio>=8.0.0,<9.0.0
 
 # IA Agents Dependencies
 langchain>=0.1.0
