--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,13 @@ python-dotenv
 
 # IA Agents Dependencies
 langchain>=0.1.0
+langchain-core>=0.1.0
 langgraph>=0.0.40
 openai>=1.0.0
 pgvector>=0.2.0
 numpy>=1.24.0
 sentence-transformers>=2.2.0
 tiktoken>=0.5.0
+
+# CopilotKit for human-in-the-loop functionality
+copilotkit>=0.0.1
