--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-dotenv>=1.0.0,<2.0.0
 starlette~=0.47.2
 pydantic~=2.11.7
 ruff>=0.1.0,<1.0.0
-twilio>=8.0.0,<9.0.0'
+twilio>=8.0.0,<9.0.0
 aiosqlite
 
 # IA Agents Dependencies
