--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 fastapi>=0.104.0,<1.0.0
 uvicorn[standard]>=0.24.0,<1.0.0
 sqlalchemy>=2.0.0,<3.0.0
@@ -8,6 +9,7 @@ starlette~=0.47.2
 pydantic~=2.11.7
 ruff>=0.1.0,<1.0.0
 twilio>=8.0.0,<9.0.0
+aiosqlite
 
 # IA Agents Dependencies
 langchain>=0.1.0
