--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 fastapi>=0.104.0,<1.0.0
 uvicorn[standard]>=0.24.0,<1.0.0
 sqlalchemy>=2.0.0,<3.0.0
@@ -11,9 +10,14 @@ ruff>=0.1.0,<1.0.0
 twilio>=8.0.0,<9.0.0
 aiosqlite
 
+# CopilotKit y LangGraph - Versiones compatibles
+copilotkit>=1.0.0
+langgraph>=0.2.50,<0.6.0
+langgraph-checkpoint>=2.0.7,<3.0.0
+httpx>=0.27.0,<0.28.0
+
 # IA Agents Dependencies
 langchain>=0.1.0
-langgraph>=0.0.40
 openai>=1.0.0
 pgvector>=0.2.0
 numpy>=1.24.0
