--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,44 @@
-fastapi>=0.104.0,<1.0.0
-uvicorn[standard]>=0.24.0,<1.0.0
-sqlalchemy>=2.0.0,<3.0.0
-asyncpg>=0.29.0,<1.0.0
-greenlet>=3.0.0,<4.0.0
-python-dotenv>=1.0.0,<2.0.0
-starlette~=0.47.2
-pydantic~=2.11.7
-ruff>=0.1.0,<1.0.0
-twilio>=8.0.0,<9.0.0
-aiosqlite
+# Core web framework
+fastapi==0.115.14
+uvicorn==0.35.0
+starlette==0.46.2
 
-# CopilotKit y LangGraph - Versiones compatibles
-copilotkit>=1.0.0
-langgraph>=0.2.50,<0.6.0
-langgraph-checkpoint>=2.0.7,<3.0.0
-httpx>=0.27.0,<0.28.0
+# Database
+sqlalchemy==2.0.42
+asyncpg==0.30.0
+pgvector==0.4.1
 
-# IA Agents Dependencies
-langchain>=0.1.0
-openai>=1.0.0
-pgvector>=0.2.0
-numpy>=1.24.0
-sentence-transformers>=2.2.0
-tiktoken>=0.5.0
+# AI and LLM
+openai==1.99.1
+langgraph==0.2.76
+langgraph-checkpoint==2.1.1
+langgraph-sdk==0.1.74
 
-# Testing dependencies
-aiohttp>=3.8.0
+# Data validation and serialization
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+
+# Environment and configuration
+python-dotenv==1.1.1
+
+# WebSocket support
+websockets==15.0.1
+
+# Notifications
+twilio==8.13.0
+
+# Numerical computing (used in embeddings)
+numpy==2.3.2
+
+# CopilotKit integration
+copilotkit==0.1.39
+
+# Type hints
+typing-extensions==4.14.1
+
+# HTTP client (used in tests)
+aiohttp==3.12.15
+
+# Development tools
+ruff==0.12.7
