--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,6 +24,8 @@ spec:
         envFrom:
         - configMapRef:
             name: ithaka-backend-config
+        - secretRef:
+            name: ithaka-backend-secret
         resources:
           requests:
             memory: "128Mi"
@@ -35,17 +37,17 @@ spec:
           httpGet:
             path: /
             port: 8000
+          initialDelaySeconds: 60
+          periodSeconds: 30
+          timeoutSeconds: 10
+          failureThreshold: 5
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8000
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 3
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8000
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          timeoutSeconds: 3
           successThreshold: 1
           failureThreshold: 3
       imagePullSecrets:
